manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "marcinjahn-website"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "marcinjahn-website"
  template:
    metadata:
      labels:
        app: "marcinjahn-website"
    spec:
      containers:
        - name: "marcinjahn-vuepress"
          image: "mjimages.azurecr.io/marcinjahn-vuepress"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
