manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "mjaks-8708"
    labels:
        app: "mjaks-8708"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "mjaks-8708"
